--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.datasource.url=jdbc:mysql://avnadmin:AVNS_FrYxRM5TaeHztetK4Dg@controlated
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
