--- a/pom.xml
+++ b/pom.xml
@@ -93,7 +93,7 @@
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-			<version>2.2.0</version> <!-- Asegúrate de usar la última versión -->
+			<version>2.2.0</version>
 		</dependency>
 
 
